# python-vscode-settings

./: .gitignore  README.md  UV_WORKSPACE_CONFIGURATION.md  pyproject.toml  pyrightconfig.json
.vscode.example/: extensions.json  launch.json  tasks.json
apps/api/: .env.example  .gitignore  pyproject.toml
apps/api/src/: __init__.py  config.py  database.py  database_sqlmodel.py  main.py
apps/api/src/routers/: __init__.py  users.py  users_prisma.py  users_sqlmodel.py
apps/api/src/schemas/: __init__.py  user.py
apps/api/tests/: conftest.py  test_users.py  test_users_prisma.py  test_users_sqlmodel.py
